--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^2.2.0-beta.3",
+    "swiper": "^8.0.7",
     "vue": "^3.0.5",
     "vue-template-compiler": "^2.6.14"
   },
@@ -18,15 +19,15 @@
     "@vue/compiler-sfc": "^3.0.5",
     "@vueuse/core": "^4.8.1",
     "antd-theme-generator": "^1.2.8",
-    "typescript": "^4.3.2",
     "less": "^4.1.1",
+    "typescript": "^4.3.2",
     "vite": "^2.4.4",
     "vite-plugin-components": "^0.8.3",
     "vite-plugin-icons": "^0.5.0",
-    "vite-plugin-windicss": "^0.12.5",
     "vite-plugin-pages": "^0.9.3",
     "vite-plugin-theme": "^0.8.1",
     "vite-plugin-vue-layouts": "^0.3.1",
+    "vite-plugin-windicss": "^0.12.5",
     "vue-router": "^4.0.5",
     "vue-tsc": "^0.2.2",
     "vuex": "^4.0.0"
