--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@ant-design/colors": "^6.0.0",
     "ant-design-vue": "^2.2.0-beta.3",
     "swiper": "^8.0.7",
     "vue": "^3.0.5",
