--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@ant-design/colors": "^6.0.0",
+    "animate.css": "^4.1.1",
     "ant-design-vue": "^2.2.0-beta.3",
     "swiper": "^8.0.7",
     "vue": "^3.0.5",
