--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,26 @@
 {
-  "bracketSpacing": true,
-  "printWidth": 100,
+  "bracketspacing": true,
+  "tabWidth": 2,
   "semi": false,
   "singleQuote": true,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "printWidth": 80,
+  "proseWrap": "never",
+  "bracketSpacing": true,
+  "endOfLine": "lf",
+  "overrides": [
+    {
+      "files": ".prettierrc",
+      "options": {
+        "parser": "json"
+      }
+    },
+    {
+      "files": "*.{css,sass,scss,less}",
+      "options": {
+        "parser": "less",
+        "tabWidth": 2
+      }
+    }
+  ]
 }
