--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@ant-design/colors": "^6.0.0",
     "animate.css": "^4.1.1",
     "ant-design-vue": "^2.2.0-beta.3",
+    "axios": "^0.26.1",
     "swiper": "^8.0.7",
     "vue": "^3.0.5",
     "vue-template-compiler": "^2.6.14"
