--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "animate.css": "^4.1.1",
     "ant-design-vue": "^2.2.0-beta.3",
     "axios": "^0.26.1",
+    "dayjs": "^1.11.0",
     "swiper": "^8.0.7",
     "vue": "^3.0.5",
     "vue-template-compiler": "^2.6.14"
