--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "experimentalDecorators": true,
+    "jsx": "preserve",
     "types": ["vite/client", "vite-plugin-vue-layouts/client"],
     "typeRoots": ["./node_modules/@types/", "./types"],
     "paths": {
