--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dayjs": "^1.11.0",
     "swiper": "^8.0.7",
     "vue": "^3.0.5",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@iconify/json": "^1.1.327",
