--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ant-design-vue": "^2.2.0-beta.3",
     "axios": "^0.26.1",
     "dayjs": "^1.11.0",
+    "echarts": "^5.3.2",
     "swiper": "^8.0.7",
     "vue": "^3.0.5",
     "vue-template-compiler": "^2.6.14",
