--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.26.1",
     "dayjs": "^1.11.0",
     "echarts": "^5.3.2",
+    "element-plus": "^2.2.2",
     "swiper": "^8.0.7",
     "vue": "^3.0.5",
     "vue-template-compiler": "^2.6.14",
@@ -30,6 +31,8 @@
     "antd-theme-generator": "^1.2.8",
     "less": "^4.1.1",
     "typescript": "^4.6.3",
+    "unplugin-auto-import": "^0.8.5",
+    "unplugin-vue-components": "^0.19.5",
     "vite": "^2.4.4",
     "vite-plugin-components": "^0.8.3",
     "vite-plugin-icons": "^0.5.0",
