--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.0",
     "echarts": "^5.3.2",
     "element-plus": "^2.2.2",
+    "highlight.js": "^11.5.1",
     "swiper": "^8.0.7",
     "vue": "^3.0.5",
     "vue-template-compiler": "^2.6.14",
